--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "typescript": "^4.9.4"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "@types/axios": "^0.14.0",
+    "@types/morgan": "^1.9.4",
+    "axios": "^1.2.3",
+    "express": "^4.18.2",
+    "morgan": "^1.10.0"
   }
 }
